# oh-my-pi

./: AGENTS.md  package.json
.liaogong-step1-venv/: pyvenv.cfg
.omc/sessions/: 54cdd583-bbfe-4d51-8edb-75a71a15980b.json  7cbccfbb-b1a1-4c7d-b8cf-4f4b034e20c2.json  a11d686f-5c6d-415e-9d09-33ec814da049.json  ac3d0e12-1564-411e-8091-a2dc8d68f9bc.json
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/54cdd583-bbfe-4d51-8edb-75a71a15980b/: hud-state.json
.omc/state/sessions/7cbccfbb-b1a1-4c7d-b8cf-4f4b034e20c2/: hud-state.json
.omc/state/sessions/a11d686f-5c6d-415e-9d09-33ec814da049/: hud-state.json
.omc/state/sessions/ac3d0e12-1564-411e-8091-a2dc8d68f9bc/: hud-state.json
.omp/skills/code-intelligence/: SKILL.md
.omp/skills/feishu-tools/: SKILL.md  feishu.sh
.omp/skills/semble-omp-packaging/: SKILL.md
.omp/tools/semble-rs/: README.md  index.test.ts  index.ts
.robomp-check-venv/: pyvenv.cfg
docs/: semble-benchmark-results.md
python/liaogong_symphony/: README.md  pyproject.toml
python/liaogong_symphony/liaogong_symphony.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/liaogong_symphony/src/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  db.py  omp_runner.py  server.py  worker.py  workflow.py  workspace.py
python/liaogong_symphony/tests/: conftest.py  test_db.py  test_integration_smoke.py  test_server.py  test_worker.py  test_worker_cancel.py  test_worker_shutdown.py  test_workflow.py  test_workspace.py
scripts/: build-semble-omp-package.ts  ci-release-build-binaries.ts  semble-benchmark.ts
(+1 files in other folders)
