[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "liaogong-symphony"
version = "0.1.0"
description = "OMP-based unattended conductor for deterministic multi-host work execution"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "liaogong-symphony" }]
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "click>=8.1",
  "omp-rpc>=0.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.13",
]

[project.scripts]
liaogong-symphony = "liaogong_symphony.cli:main"

[tool.setuptools]
package-dir = { "liaogong_symphony" = "src" }
packages = ["liaogong_symphony"]

[tool.setuptools.package-data]
liaogong_symphony = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["data"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "PIE",
]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["liaogong_symphony"]

[tool.ruff.format]
quote-style = "double"
